[gd_scene load_steps=8 format=3 uid="uid://ck37gt6lykv3a"]

[ext_resource type="Texture2D" uid="uid://blcshc5io0vsp" path="res://textures/magic/pickaxe1.png" id="1_erfkd"]
[ext_resource type="Script" path="res://scenes/mine.gd" id="1_pyeyi"]
[ext_resource type="Texture2D" uid="uid://dptydfmgw1ont" path="res://textures/magic/pickaxe2.png" id="2_i3by2"]
[ext_resource type="Texture2D" uid="uid://60d73ugancmx" path="res://textures/magic/pickaxe3.png" id="3_xfco4"]
[ext_resource type="AudioStream" uid="uid://bo3pp6ky040l3" path="res://sounds/pickaxe_sound1.wav" id="4_1pbil"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vjshf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_erfkd")
}, {
"duration": 1.0,
"texture": ExtResource("2_i3by2")
}, {
"duration": 2.0,
"texture": ExtResource("3_xfco4")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ht3q3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_erfkd")
}, {
"duration": 1.0,
"texture": ExtResource("2_i3by2")
}, {
"duration": 2.0,
"texture": ExtResource("3_xfco4")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="mine" type="Node2D"]
script = ExtResource("1_pyeyi")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(-44, -63)
sprite_frames = SubResource("SpriteFrames_vjshf")
autoplay = "default"
frame_progress = 0.793911

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(52, -39)
sprite_frames = SubResource("SpriteFrames_ht3q3")
autoplay = "default"
frame_progress = 0.793655
flip_h = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1pbil")
max_polyphony = 2

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 2

[connection signal="animation_looped" from="AnimatedSprite2D2" to="." method="_on_animated_sprite_2d_2_animation_looped"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
